updating social media link

--- a/index.html
+++ b/index.html
@@ -266,11 +266,11 @@
             <p><i class="fa-solid fa-envelope"></i>addisuelectrical@gmail.com</p>
             <p><i class="fa-solid fa-phone-volume"></i>+251-921-56-78-40</p>
             <div class="social-icons">
-              <a href=""><i class="fa-brands fa-facebook"></i></a>
-              <a href=""><i class="fa-brands fa-github"></i></a>
-              <a href=""><i class="fa-brands fa-telegram"></i></a>
-              <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-              <a href=""><i class="fa-brands fa-linkedin"></i></a>
+              <a href="https://www.facebook.com/addisuzola"><i class="fa-brands fa-facebook"></i></a>
+              <a href="https://github.com/Addisu-Etana"><i class="fa-brands fa-github"></i></a>
+              <a href="https://t.me/addisuzola"><i class="fa-brands fa-telegram"></i></a>
+              <a href="https://x.com/addisu_etana"><i class="fa-brands fa-x-twitter"></i></a>
+              <a href="https://www.linkedin.com/in/addisu-etana-117258252/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
             <a href="./images/Edited.AddisuEtana.pdf" download="" class="btn btn2">Download CV</a>
           </div>
